# akbi-dojo

./: .gitignore  README.adoc
app/akbi-dojo/: akbi-dojo.c  akbi.h  global.h
app/akbi-dojo/lessons/: activate-akbi.h  use-navigation-keys.h
mk/cmake/: CMakeLists.txt  Custom.cmake  FileLists.cmake
